--- a/interface/main_interface.css
+++ b/interface/main_interface.css
@@ -32,7 +32,7 @@ body {
 
 #main_menu #user_panel {
 	float: right;
-	padding: 9px;
+	padding: 5px 10px 0 10px;
 	padding-bottom:0;
 }
 
@@ -323,6 +323,10 @@ td.collapsed {
 }
 
 #debug_depo {
+	height:140px;
+}
+
+#debug_depo #debug_stash, #debug_depo #console {
 	border:2px solid red;
 	padding:8px;
 	height:120px;
