--- a/displays/desktop/interface.css
+++ b/displays/desktop/interface.css
@@ -151,15 +151,6 @@ body {
 	background-color:#AAAAAA;
 }
 
-#overlay {
-	z-index:10;
-	background: black;
-	position:absolute;
-	width:100%;
-	opacity:0.2;
-	filter:alpha(opacity=20);
-}
-
 #app_frame_table {
 	width:100%;
 	height:100%;
@@ -252,6 +243,11 @@ td.collapsed {
 .tbar_updating {background-image: url(../../images/updating.png);}
 .tbar_throbber {background-image: url(../../images/throbber-white.gif);}
 
+.throbber {
+	background: url(../../images/throbber-big.gif) center no-repeat;
+	height: 50px;
+}
+
 .col_menubar {
 	height:24px;
 }
@@ -342,6 +338,11 @@ td.collapsed {
 	font-size: 10px;
 }
 
+.subtext a {
+	color:#555555;
+	font-size: 10px;
+}
+
 .w80 {
 	width: 80%;
 }
@@ -370,11 +371,63 @@ td.collapsed {
 	background-color:#eeeeee;
 }
 
-.load_curtain{
+.load_curtain {
 	z-index:1000;
 	background: white;
 	position:absolute;
 	width:100%;
 	height: 100%;
 	background: url(../../images/throbber-big.gif) center no-repeat;
+}
+
+#curtain {
+	z-index:900;
+	position:absolute;
+	width:100%;
+	background: black;
+	opacity:0.65;
+	filter:alpha(opacity=65);
+}
+
+#overdiv {
+	position: absolute;
+	z-index:910;
+	width:100%;
+}
+
+#overdiv .window {
+	background-color: white;
+
+	border-radius:6px;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+
+	width: 600px;
+	margin: auto;
+	padding: 10px;
+	margin-top: 50px;
+}
+
+#overdiv .close {
+	background: url(../../images/close.png) no-repeat center;
+	width:22px;
+	height:22px;
+	cursor: pointer;
+}
+
+#overdiv .title {
+	color: #555;
+	font-size: 16px;
+}
+
+#overdiv .overcontent {
+	padding:20px;
+}
+
+.left {
+	float:left;
+}
+
+.right {
+	float:right;
 }
