--- a/displays/desktop/interface.css
+++ b/displays/desktop/interface.css
@@ -138,6 +138,28 @@ body {
 	background-position: 2px 2px;
 }
 
+.col_menubar .sbtn {
+	border-color: #005b89;
+	background-color: #008ab8;
+}
+
+.col_menubar .sbtn span, .col_menubar .sbtn:active span, .col_menubar .sbtn_active span {
+	color:white;
+}
+
+.col_menubar .sbtn_active, .col_menubar .sbtn:active {
+	background-color:#006699;
+	border-color: #004162;
+
+	box-shadow:inset 1px 1px 3px #00334d;
+	-moz-box-shadow:inset 1px 1px 3px #00334d;
+	-webkit-box-shadow:inset 1px 1px 3px #00334d;
+}
+
+.col_menubar .newtopic {
+	background-image: url(../../images/comments_add.png);
+}
+
 #debug_toggle{
 	background-image: url(../../images/bug.png);
 }
@@ -239,6 +261,10 @@ td.collapsed {
 	background-repeat: no-repeat;
 }
 
+.title_edit {
+	background-color:#008ab8;
+}
+
 .tbar_waiting {background-image: url(../../images/waiting.png);}
 .tbar_updating {background-image: url(../../images/updating.png);}
 .tbar_throbber {background-image: url(../../images/throbber-white.gif);}
@@ -250,6 +276,7 @@ td.collapsed {
 
 .col_menubar {
 	height:24px;
+	padding: 2px 10px;
 }
 
 .col_statusbar {
