unread coloring, step1

--- a/displays/desktop/interface.css
+++ b/displays/desktop/interface.css
@@ -114,6 +114,7 @@ hr {
 	border-width: 1px;
 	border-color:#CCCCCC;
 
+	background-color: white;
 	background-position: 1px 1px;
 	background-repeat: no-repeat;
 }
