--- a/displays/desktop/interface.css
+++ b/displays/desktop/interface.css
@@ -327,23 +327,18 @@ td.collapsed {
 	background: green;
 }
 
-[type="menu"] {
+#viewport_menu {
 	width:15%;
-	min-width: 150px;
+	min-width:150px;
 }
 
-[type="users"] {
-	width:15%;
-	min-width: 150px;
-}
-
-[type="topics"] {
+#viewport_topics {
 	width:40%;
-	min-width: 250px;
+	min-width:300px;
 }
 
-[type="posts"] {
-	min-width:250px;
+#viewport_posts {
+	min-width:300px;
 }
 
 .none {
