--- a/displays/desktop/interface.css
+++ b/displays/desktop/interface.css
@@ -8,131 +8,9 @@ hr { border: 0 none; height: 1px; }
 #over_curtain	{ z-index:910; }
 #over_curtain .window { margin: auto; }
 
+
 /* основное окно программы */
 #app_area	{ overflow: hidden; }
-
-.button {
-	padding-left: 24px;
-	height: 24px;
-	margin: 3px;
-
-	border-radius:3px;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-
-	border-style: solid;
-	border-width: 1px;
-	border-color:#CCCCCC;
-
-	background-position: 4px 4px;
-	background-repeat: no-repeat;
-	cursor: pointer;
-}
-
-.button span {
-	padding: 4px 5px 0 1px;
-	display:block;
-}
-
-.button:hover {
-	border-color:#999999;
-	background-color:#eeeeee;
-}
-
-.button:active span, .btn_active span {
-	padding: 5px 4px 0 2px;
-	display:block;
-}
-
-.btn_active, .button:active {
-	border-color:#999999;
-	background-color:#e5e5e5;
-
-	box-shadow:inset 1px 1px 4px #999999;
-	-moz-box-shadow:inset 1px 1px 4px #999999;
-	-webkit-box-shadow:inset 1px 1px 4px #999999;
-	
-	background-position: 5px 5px;
-}
-
-.sbtn {
-	padding-left: 18px;
-	height: 18px;
-	margin-left: 3px;
-
-	border-radius:2px;
-	-moz-border-radius:2px;
-	-webkit-border-radius:2px;
-
-	border-style: solid;
-	border-width: 1px;
-	border-color:#CCCCCC;
-
-	background-color: white;
-	background-position: 1px 1px;
-	background-repeat: no-repeat;
-}
-
-.sbtn span {
-	padding: 2px 5px 0 1px;
-	display:block;
-	color:#555555;
-}
-
-.sbtn:hover {
-	border-color:#999999;
-	background-color:#eeeeee;
-	cursor: pointer;
-}
-
-.sbtn:active span, .sbtn_active span {
-	padding: 3px 4px 0 2px;
-	display:block;
-}
-
-.sbtn_active, .sbtn:active {
-	border-color:#999999;
-	background-color:#e5e5e5;
-
-	box-shadow:inset 1px 1px 3px #999999;
-	-moz-box-shadow:inset 1px 1px 3px #999999;
-	-webkit-box-shadow:inset 1px 1px 3px #999999;
-	background-position: 2px 2px;
-}
-
-.toolbar .sbtn {
-	border-color: #005b89;
-	background-color: #008ab8;
-}
-
-.toolbar .sbtn span, .toolbar .sbtn:active span, .toolbar .sbtn_active span {
-	color:white;
-}
-
-.toolbar .sbtn_active, .toolbar .sbtn:active {
-	background-color:#006699;
-	border-color: #004162;
-
-	box-shadow:inset 1px 1px 3px #00334d;
-	-moz-box-shadow:inset 1px 1px 3px #00334d;
-	-webkit-box-shadow:inset 1px 1px 3px #00334d;
-}
-
-.toolbar .newtopic {
-	background-image: url(../../images/comments_add.png);
-}
-
-.toolbar .markread {
-	background-image: url(../../images/email_open_image.png);
-}
-
-.toolbar .throbb {
-	background-image: url(../../images/throbber-white.gif);
-}
-
-#debug_toggle{
-	background-image: url(../../images/bug.png);
-}
 
 .noselect {
 	-moz-user-select: none;
@@ -143,81 +21,29 @@ hr { border: 0 none; height: 1px; }
 	background-color:#AAAAAA;
 }
 
-#app_block {
-	width:100%;
-	height:100%;
-}
+#app_block { width:100%; height:100%; }
 
 .global_column { vertical-align:top; }
 
 .vport_resizer { cursor: e-resize; }
 
-td.collapsed {
-	cursor:pointer;
-	background:white url(../../images/arrow-right.gif) center no-repeat;
-}
-
-.collapsed .column_inner {
-	display: none;
-}
-
+td.collapsed { cursor:pointer; }
+.collapsed .column_inner { display: none; }
 .collapser { float:left; cursor:pointer; }
-.collapser:hover, .collapsed:hover { background-color:#EEEEEE; }
 
-#menu_unhide {
-	background:white url(../../images/arrow-right.gif) center no-repeat;
-
-	border-radius:6px;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-
-	margin-right:9px;
-	width:14px;
-}
-
-.titlebar {
-	height:18px;
-	color:white;
-	font-weight:bold;
-	padding:4px 6px 0 22px;
+.global_column .titlebar {
 	background-image: url(../../images/ready.png);
 	background-position: 3px 3px;
 	background-repeat: no-repeat;
 }
+.global_column .tbar_waiting {background-image: url(../../images/waiting.png);}
+.global_column .tbar_updating {background-image: url(../../images/updating.png);}
+.global_column .tbar_throbber {background-image: url(../../images/throbber-white.gif);}
 
-.title_edit {
-	background-color:#008ab8;
-}
 
-.throbber {
-	background: url(../../images/throbber-big.gif) center no-repeat;
-	height: 50px;
-}
 
-.toolbar {
-	height:24px;
-	padding: 2px 10px;
-	color:white;
-}
-
-.statusbar {overflow-y:auto;}
-
-.column_inner .contents{
-	overflow-y:scroll;
-	overflow-x:hidden;
-}
-
-.red {
-	background: red;
-}
-
-.blue {
-	background: blue;
-}
-
-.green {
-	background: green;
-}
+.global_column .statusbar {overflow-y:auto;}
+.column_inner .contents{ overflow-y:scroll; overflow-x:hidden; }
 
 #viewport_menu {
 	width:15%;
@@ -248,44 +74,6 @@ td.collapsed {
 	border-bottom:2px dotted #888888;
 }
 
-.subtext {
-	color:#888888;
-	font-size: 10px;
-}
-
-.subtext a {
-	color:#555555;
-	font-size: 10px;
-}
-
-.w80 {
-	width: 80%;
-}
-
-.invis {
-	visibility: hidden;
-}
-
-.reveal {
-	visibility: hidden;
-}
-
-.revealer:hover .reveal {
-	visibility: visible;
-}
-
-.reveal2 {
-	visibility: hidden;
-}
-
-.revealer2:hover .reveal2 {
-	visibility: visible;
-}
-
-.dim {
-	background-color:#eeeeee;
-}
-
 .load_curtain {
 	z-index:1000;
 	background: white;
@@ -295,23 +83,34 @@ td.collapsed {
 	background: url(../../images/throbber-big.gif) center no-repeat;
 }
 
-
-
-.left {
-	float:left;
-}
-
-.right {
-	float:right;
-}
-
-.tbar_waiting {background-image: url(../../images/waiting.png);}
-.tbar_updating {background-image: url(../../images/updating.png);}
-.tbar_throbber {background-image: url(../../images/throbber-white.gif);}
-
 /* универсальные классы*/
+.left		{ float:left; }
+.right		{ float:right; }
+
+.red		{ background: red; }
+.blue		{ background: blue; }
+.green		{ background: green; }
+
+.subtext	{ color:#888888; font-size: 10px; }
+.subtext a	{ color:#555555; font-size: 10px; }
+
+.w80		{ width: 80%; }
+
+.invis		{ visibility: hidden; }
+
+.reveal, .reveal2, .reveal3 { visibility: hidden; }
+.revealer:hover .reveal, .revealer2:hover .reveal2, .revealer3:hover .reveal3 { visibility: visible; }
+
+.dim {background-color:#eeeeee;}
+
+.throbber {
+	background: url(../../images/throbber-big.gif) center no-repeat;
+	height: 50px;
+}
 .pointer	{ cursor: pointer; }
+
 .none		{ display: none; }
+
 .clear		{ cursor:auto; background:transparent; }
 .clearboth	{ clear:both; }
 .noselect .shadow {
