--- a/skins/aquamarine/desktop_main.css
+++ b/skins/aquamarine/desktop_main.css
@@ -130,5 +130,150 @@ hr {
 	background-image: -moz-linear-gradient(bottom, #FFFFFF, #EEEEEE);
 	filter:progid:DXImageTransform.Microsoft.Gradient(
 		GradientType=0, StartColorStr='#EEEEEE', EndColorStr='#FFFFFF');
+}
 
+td.collapsed {
+	background:white url(../../images/arrow-right.gif) center no-repeat;
+}
+
+.collapser:hover, .collapsed:hover { 
+	background-color:#EEEEEE;
+}
+
+.global_column .titlebar {
+	height:18px;
+	color:white;
+	font-weight:bold;
+	padding:4px 6px 0 22px;
+}
+
+.global_column .toolbar {
+	height:24px;
+	padding: 2px 10px;
+	color:white;
+}
+
+/* Кнопки */
+
+.button {
+	padding-left: 24px;
+	height: 24px;
+	margin: 3px;
+
+	border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+
+	border-style: solid;
+	border-width: 1px;
+	border-color:#CCCCCC;
+
+	background-position: 4px 4px;
+	background-repeat: no-repeat;
+	cursor: pointer;
+}
+
+.button span {
+	padding: 4px 5px 0 1px;
+	display:block;
+}
+
+.button:hover {
+	border-color:#999999;
+	background-color:#eeeeee;
+}
+
+.button:active span, .btn_active span {
+	padding: 5px 4px 0 2px;
+	display:block;
+}
+
+.btn_active, .button:active {
+	border-color:#999999;
+	background-color:#e5e5e5;
+
+	box-shadow:inset 1px 1px 4px #999999;
+	-moz-box-shadow:inset 1px 1px 4px #999999;
+	-webkit-box-shadow:inset 1px 1px 4px #999999;
+	
+	background-position: 5px 5px;
+}
+
+.sbtn {
+	padding-left: 18px;
+	height: 18px;
+	margin-left: 3px;
+
+	border-radius:2px;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+
+	border-style: solid;
+	border-width: 1px;
+	border-color:#CCCCCC;
+
+	background-color: white;
+	background-position: 1px 1px;
+	background-repeat: no-repeat;
+}
+
+.sbtn span {
+	padding: 2px 5px 0 1px;
+	display:block;
+	color:#555555;
+}
+
+.sbtn:hover {
+	border-color:#999999;
+	background-color:#eeeeee;
+	cursor: pointer;
+}
+
+.sbtn:active span, .sbtn_active span {
+	padding: 3px 4px 0 2px;
+	display:block;
+}
+
+.sbtn_active, .sbtn:active {
+	border-color:#999999;
+	background-color:#e5e5e5;
+
+	box-shadow:inset 1px 1px 3px #999999;
+	-moz-box-shadow:inset 1px 1px 3px #999999;
+	-webkit-box-shadow:inset 1px 1px 3px #999999;
+	background-position: 2px 2px;
+}
+
+.toolbar .sbtn {
+	border-color: #005b89;
+	background-color: #008ab8;
+}
+
+.toolbar .sbtn span, .toolbar .sbtn:active span, .toolbar .sbtn_active span {
+	color:white;
+}
+
+.toolbar .sbtn_active, .toolbar .sbtn:active {
+	background-color:#006699;
+	border-color: #004162;
+
+	box-shadow:inset 1px 1px 3px #00334d;
+	-moz-box-shadow:inset 1px 1px 3px #00334d;
+	-webkit-box-shadow:inset 1px 1px 3px #00334d;
+}
+
+.toolbar .newtopic {
+	background-image: url(../../images/comments_add.png);
+}
+
+.toolbar .markread {
+	background-image: url(../../images/email_open_image.png);
+}
+
+.toolbar .throbb {
+	background-image: url(../../images/throbber-white.gif);
+}
+
+#debug_toggle{
+	background-image: url(../../images/bug.png);
 }
