--- a/skins/aquamarine/desktop_main.css
+++ b/skins/aquamarine/desktop_main.css
@@ -277,3 +277,17 @@ td.collapsed {
 #debug_toggle{
 	background-image: url(../../images/bug.png);
 }
+
+#viewport_menu {
+	width:15%;
+	min-width:150px;
+}
+
+#viewport_topics {
+	width:40%;
+	min-width:300px;
+}
+
+#viewport_posts {
+	min-width:300px;
+}
