--- a/displays/desktop/content.css
+++ b/displays/desktop/content.css
@@ -32,7 +32,7 @@
 }
 
 .editabletopic:hover {
-	background: url(../../images/textfield_rename.png) right center no-repeat;
+	background: url(images/textfield_rename.png) right center no-repeat;
 }
 
 .topic:hover {
@@ -132,7 +132,7 @@
 	background: #e1ffe0;
 	color:black;
 	border-right:0;
-	background:#e1ffe0 url(../../images/actopic_pane.gif) right center no-repeat;
+	background:#e1ffe0 url(images/actopic_pane.gif) right center no-repeat;
 }
 
 .activetopic .infobar,
@@ -149,7 +149,7 @@
 
 #continue_branch_btn {
 	height: 14px;
-	background: url(../../images/comment_add.png) center no-repeat;
+	background: url(images/comment_add.png) center no-repeat;
 	padding: 3px;
 }
 
@@ -196,13 +196,13 @@
 }
 
 #cancel_post {
-	background-image: url(../../images/cancel.png);
+	background-image: url(images/cancel.png);
 	float: right;
 	margin-right: 0;
 }
 
 #send_post {
-	background-image: url(../../images/comment.png);
+	background-image: url(images/comment.png);
 	float:left;
 	margin-left: 0;
 }
@@ -215,7 +215,7 @@
 }
 
 .throbber_gray {
-	background: #ebebeb url(../../images/throbber-gray.gif) center no-repeat;
+	background: #ebebeb url(images/throbber-gray.gif) center no-repeat;
 	border:2px solid #ebebeb;
 	color:#777777;
 }
@@ -227,12 +227,12 @@
 .brancher {
 	border-left: 40px solid white;
 	padding: 3px;
-	background:url(../../images/bullet_add.png) center right no-repeat;
+	background:url(images/bullet_add.png) center right no-repeat;
 	height: 12px;
 }
 
 .brancher:hover {
-	background:#eeeeee url(../../images/comments_add.png) center right no-repeat;
+	background:#eeeeee url(images/comments_add.png) center right no-repeat;
 	border-color: #cccccc;
 	cursor:pointer;
 }
@@ -249,13 +249,13 @@
 	float:right;
 }
 
-.controls .addbranch	{ background-image: url(../../images/branch.png); }
-.controls .plainanswer	{ background-image: url(../../images/arrow_down.png); display:none; }
-.controls .editmessage	{ background-image: url(../../images/comment_edit.png); }
-.controls .deletemessage{ background-image: url(../../images/comment_delete.png); }
-.controls .cancel		{ background-image: url(../../images/cancel.png); }
-.controls .save			{ background-image: url(../../images/accept.png); }
-.controls .collex		{ background-image: url(../../images/collapse.png); float:left;}
+.controls .addbranch	{ background-image: url(images/branch.png); }
+.controls .plainanswer	{ background-image: url(images/arrow_down.png); display:none; }
+.controls .editmessage	{ background-image: url(images/comment_edit.png); }
+.controls .deletemessage{ background-image: url(images/comment_delete.png); }
+.controls .cancel		{ background-image: url(images/cancel.png); }
+.controls .save			{ background-image: url(images/accept.png); }
+.controls .collex		{ background-image: url(images/collapse.png); float:left;}
 
 .lastblock .addbranch {display:none;}
 .lastblock .plainanswer {display:block;}
@@ -282,7 +282,7 @@
 	float:right;
 	width: 18px;
 	height: 18px;
-	background: url(../../images/accept.png) center no-repeat;
+	background: url(images/accept.png) center no-repeat;
 }
 
 .okbtn:hover {
@@ -291,5 +291,5 @@
 
 .updating {
 	color:#bbbbbb;
-	background: url(../../images/throbber-lit.gif) center no-repeat;
+	background: url(images/throbber-lit.gif) center no-repeat;
 }
