--- a/skins/aquamarine/desktop_main.css
+++ b/skins/aquamarine/desktop_main.css
@@ -514,7 +514,7 @@ td.collapsed {
 	margin-left: 0;
 }
 
-#newtopic .topic_name {
+#answer_here .topic_name {
 	width:100%;
 	border: 1px solid #cccccc;
 	margin: 4px 0;
