--- a/skins/aquamarine/desktop_main.css
+++ b/skins/aquamarine/desktop_main.css
@@ -86,7 +86,7 @@ hr {
 /* вьюпорт */
 .global_column {
 	color:black;
-	background:white;
+	background:#ddd;
 
 	border-radius:6px;
 	-moz-border-radius:6px;
@@ -312,10 +312,17 @@ td.collapsed {
 	border-bottom: 1px solid #aaaaaa;
 	color:#555555;
 	background-color: white;
+	
+	-webkit-transition:	background-color 0.5s ease-in-out, opacity 0.5s ease-in-out, color 0.5s ease-in-out;
+	-moz-transition:	background-color 0.5s ease-in-out, opacity 0.5s ease-in-out, color 0.5s ease-in-out;
+	-o-transition:		background-color 0.5s ease-in-out, opacity 0.5s ease-in-out, color 0.5s ease-in-out;
+	-ms-transition:		background-color 0.5s ease-in-out, opacity 0.5s ease-in-out, color 0.5s ease-in-out;	
+	transition:			background-color 0.5s ease-in-out, opacity 0.5s ease-in-out, color 0.5s ease-in-out;
 }
 
 .post {
 	color:black;
+
 }
 
 .topic {
@@ -649,6 +656,18 @@ td.collapsed {
 
 .redBack {
 	background-color: red;
+}
+
+.blackBack {
+	background-color: black;
+}
+
+.grayBack {
+	background-color: #ccc;
+}
+
+.transp {
+	opacity:0;
 }
 
 .tags {
