serious advance in dynamic page dl

--- a/skins/aquamarine/desktop_main.css
+++ b/skins/aquamarine/desktop_main.css
@@ -766,3 +766,12 @@ td.collapsed {
 #viewport_posts .selected {
 	border-color: coral;
 }
+
+.show_more {
+	padding:6px 15px;
+	text-align: center;
+}
+
+.show_more a {
+	margin-right:10px;
+}
