--- a/skins/aquamarine/styles/desktop_design.css
+++ b/skins/aquamarine/styles/desktop_design.css
@@ -36,7 +36,7 @@ hr {
 }
 
 #over_curtain .close_btn {
-	background: url(images/close.png) no-repeat center;
+	background: url(../images/close.png) no-repeat center;
 	width:16px;
 	height:16px;
 }
@@ -109,7 +109,7 @@ hr {
 
 .vport_resizer {
 	width: 15px;
-	background:url(images/e-resize.gif) center no-repeat;
+	background:url(../images/e-resize.gif) center no-repeat;
 }
 
 .vport_resizer .fixer {
@@ -118,7 +118,7 @@ hr {
 
 .collapser {
 	width:14px;
-	background:url(images/arrow-left-a.gif) center no-repeat;
+	background:url(../images/arrow-left-a.gif) center no-repeat;
 	border-right:1px dotted #DDDDDD;
 }
 
@@ -138,7 +138,7 @@ hr {
 }
 
 td.collapsed {
-	background:white url(images/arrow-right.gif) center no-repeat;
+	background:white url(../images/arrow-right.gif) center no-repeat;
 }
 
 .collapser:hover, .collapsed:hover { 
@@ -268,19 +268,19 @@ td.collapsed {
 }
 
 .toolbar .newtopic {
-	background-image: url(images/comments_add.png);
+	background-image: url(../images/comments_add.png);
 }
 
 .toolbar .markread {
-	background-image: url(images/email_open_image.png);
+	background-image: url(../images/email_open_image.png);
 }
 
 .toolbar .throbb {
-	background-image: url(images/throbber-white.gif);
+	background-image: url(../images/throbber-white.gif);
 }
 
 #debug_toggle{
-	background-image: url(images/bug.png);
+	background-image: url(../images/bug.png);
 }
 
 #viewport_menu {
@@ -344,17 +344,17 @@ td.collapsed {
 }
 
 .btn_topicedit {
-	background-image: url(images/textfield_rename.png)
+	background-image: url(../images/textfield_rename.png)
 }
 .btn_topicsubmit {
-	background-image: url(images/accept.png)
+	background-image: url(../images/accept.png)
 }
 .btn_topiccancel {
-	background-image: url(images/cancel.png)
+	background-image: url(../images/cancel.png)
 }
 
 .btn_deltag {
-	background-image: url(images/tag_blue_delete.png)
+	background-image: url(../images/tag_blue_delete.png)
 }
 
 .topic:hover {
@@ -464,7 +464,7 @@ td.collapsed {
 	background: #e1ffe0;
 	color:black;
 	border-right:0;
-	background:#e1ffe0 url(images/actopic_pane.gif) right center no-repeat;
+	background:#e1ffe0 url(../images/actopic_pane.gif) right center no-repeat;
 }
 
 .activetopic .infobar,
@@ -481,7 +481,7 @@ td.collapsed {
 
 #continue_branch_btn {
 	height: 14px;
-	background: url(images/comment_add.png) center no-repeat;
+	background: url(../images/comment_add.png) center no-repeat;
 	padding: 3px;
 }
 
@@ -528,13 +528,13 @@ td.collapsed {
 }
 
 #cancel_post {
-	background-image: url(images/cancel.png);
+	background-image: url(../images/cancel.png);
 	float: right;
 	margin-right: 0;
 }
 
 #send_post {
-	background-image: url(images/comment.png);
+	background-image: url(../images/comment.png);
 	float:left;
 	margin-left: 0;
 }
@@ -547,7 +547,7 @@ td.collapsed {
 }
 
 .throbber_gray {
-	background: #ebebeb url(images/throbber-gray.gif) center no-repeat;
+	background: #ebebeb url(../images/throbber-gray.gif) center no-repeat;
 	border:2px solid #ebebeb;
 	color:#777777;
 }
@@ -559,12 +559,12 @@ td.collapsed {
 .brancher {
 	border-left: 40px solid white;
 	padding: 3px;
-	background:url(images/bullet_add.png) center right no-repeat;
+	background:url(../images/bullet_add.png) center right no-repeat;
 	height: 12px;
 }
 
 .brancher:hover {
-	background:#eeeeee url(images/comments_add.png) center right no-repeat;
+	background:#eeeeee url(../images/comments_add.png) center right no-repeat;
 	border-color: #cccccc;
 	cursor:pointer;
 }
@@ -581,13 +581,13 @@ td.collapsed {
 	float:right;
 }
 
-.controls .addbranch	{ background-image: url(images/branch.png); }
-.controls .plainanswer	{ background-image: url(images/arrow_down.png); display:none; }
-.controls .editmessage	{ background-image: url(images/comment_edit.png); }
-.controls .deletemessage{ background-image: url(images/comment_delete.png); }
-.controls .cancel		{ background-image: url(images/cancel.png); }
-.controls .save			{ background-image: url(images/accept.png); }
-.controls .collex		{ background-image: url(images/collapse.png); float:left;}
+.controls .addbranch	{ background-image: url(../images/branch.png); }
+.controls .plainanswer	{ background-image: url(../images/arrow_down.png); display:none; }
+.controls .editmessage	{ background-image: url(../images/comment_edit.png); }
+.controls .deletemessage{ background-image: url(../images/comment_delete.png); }
+.controls .cancel		{ background-image: url(../images/cancel.png); }
+.controls .save			{ background-image: url(../images/accept.png); }
+.controls .collex		{ background-image: url(../images/collapse.png); float:left;}
 
 .lastblock .addbranch {display:none;}
 .lastblock .plainanswer {display:block;}
@@ -614,7 +614,7 @@ td.collapsed {
 	float:right;
 	width: 18px;
 	height: 18px;
-	background: url(images/accept.png) center no-repeat;
+	background: url(../images/accept.png) center no-repeat;
 }
 
 .okbtn:hover {
@@ -624,23 +624,23 @@ td.collapsed {
 .state_ind {
 	width:32px;
 	height:32px;
-	background: url(images/close.png) center no-repeat;
+	background: url(../images/close.png) center no-repeat;
 }
 
 .updating {
 	color:#bbbbbb;
-	background: url(images/throbber-lit.gif) center no-repeat;
+	background: url(../images/throbber-lit.gif) center no-repeat;
 }
 
 .throbber {
-	background: url(images/throbber-big.gif) center no-repeat;
+	background: url(../images/throbber-big.gif) center no-repeat;
 	height: 50px;
 }
 /*
-.global_column .titlebar		{ background-image: url(images/ready.png); }
-.global_column .tbar_waiting	{ background-image: url(images/waiting.png); }
-.global_column .tbar_updating	{ background-image: url(images/updating.png); }
-.global_column .tbar_throbber	{ background-image: url(images/throbber-white.gif); }
+.global_column .titlebar		{ background-image: url(../images/ready.png); }
+.global_column .tbar_waiting	{ background-image: url(../images/waiting.png); }
+.global_column .tbar_updating	{ background-image: url(../images/updating.png); }
+.global_column .tbar_throbber	{ background-image: url(../images/throbber-white.gif); }
 */
 
 #viewport_posts .typing_panel {
