--- a/skins/aquamarine/styles/desktop_design.css
+++ b/skins/aquamarine/styles/desktop_design.css
@@ -51,6 +51,11 @@ hr {
 }
 
 /* основное окно программы */
+
+.post, .topic {
+	border:0;
+}
+
 #app_area {
 	padding: 10px;
 }
@@ -80,7 +85,7 @@ hr {
 	color:black;
 	font-size: 18px;
 	float:left;
-	padding: 4px;
+	padding: 1px;
 }
 
 /* вьюпорт */
